Complete project structure and theme integration improvements
## Documentation Structure Updates
- Move intro.md to proper tutorial-basics location
- Update tutorial categories and content structure
- Refine documentation navigation and organization

## Package Dependencies & Configuration
- Add development dependencies for theme development
- Update package.json with theme sync scripts and validation
- Lock updated dependencies in package-lock.json

## ELEVATE Theme Package Development
- Complete theme package implementation with ELEVATE design tokens
- Add comprehensive CSS integration with ELEVATE primitives and alias tokens
- Implement Logo component with light/dark mode SVG assets
- Create Root component with theme synchronization
- Add MDX content and component integration

## Swizzled Docusaurus Components
- Implement custom ColorModeToggle with ELEVATE styling
- Update Logo component with INFORM branding and theme-aware display
- Enhance MDX content handling for ELEVATE components

## Theme Synchronization System
- Add sync-theme-package.js for automated theme development workflow
- Implement build, watch, and validation modes for theme package
- Integrate theme assets (SVG logos) with proper light/dark variants

## Project Configuration
- Update .gitignore to exclude build artifacts and temporary files
- Enhance homepage styling and branding consistency
- Integrate ELEVATE design system throughout documentation site

These changes establish the complete foundation for the ELEVATE Design System
documentation with proper theme integration, build tools, and documentation structure.

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,10 @@ node_modules
 
 # Code Tools
 .claude
+CLAUDE.md
+PACKAGE-DEPENDENCY-GUIDE.md
+THEME-DEVELOPMENT.md
+THEME.md
+kill-dev-simple.bat
+kill-dev-simple.ps1
 .idea
