--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "sync-theme": "node sync-theme-package.js",
+    "sync-theme-build": "node sync-theme-package.js --build",
+    "sync-theme-watch": "node sync-theme-package.js --watch",
+    "validate-theme": "node sync-theme-package.js --build && echo 'Theme package validation complete'"
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
@@ -31,6 +35,7 @@
     "@docusaurus/module-type-aliases": "3.8.1",
     "@docusaurus/tsconfig": "3.8.1",
     "@docusaurus/types": "3.8.1",
+    "chokidar": "^4.0.3",
     "typescript": "~5.6.2"
   },
   "browserslist": {
