--- a/packages/docusaurus-theme-inform-elevate/package.json
+++ b/packages/docusaurus-theme-inform-elevate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inform/docusaurus-theme-elevate",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "INFORM ELEVATE Design System theme for Docusaurus",
   "keywords": [
     "docusaurus",
@@ -44,9 +44,10 @@
     "clsx": "^2.0.0"
   },
   "peerDependencies": {
-    "@docusaurus/core": "^3.8.0",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "@docusaurus/core": "3.8.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@docusaurus/theme-classic": "3.8.1"
   },
   "devDependencies": {
     "@docusaurus/types": "^3.8.0",
@@ -59,5 +60,7 @@
   },
   "engines": {
     "node": ">=18.0"
-  }
+  },
+  "lastSync": "2025-08-10T16:38:25.212Z",
+  "peerDependenciesMeta": {}
 }
