Fix GitHub Packages authentication for ELEVATE Core UI dependency
## Issue Identified
GitHub Actions deployment failing with 401 Unauthorized error when installing
@inform-elevate/elevate-core-ui package from GitHub Packages Registry.

## Authentication Fix
- Add .npmrc configuration for @inform-elevate scope pointing to GitHub Packages
- Configure GitHub Actions workflow to authenticate with GitHub Packages
- Use ELEVATE_DS2 secret for NPM authentication in both build and test jobs
- Set NODE_AUTH_TOKEN environment variable for npm ci commands

## Workflow Updates
- Add registry-url configuration to setup-node action
- Configure npm authentication before dependency installation
- Apply same authentication to both build and test-build jobs
- Ensure proper token access for private GitHub Packages

This resolves: "npm error 401 Unauthorized - GET https://npm.pkg.github.com/download/@inform-elevate/elevate-core-ui"

The deployment should now successfully install ELEVATE Core UI and proceed with the build.

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -31,12 +31,20 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          registry-url: 'https://npm.pkg.github.com'
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      - name: Configure npm for GitHub Packages
+        run: |
+          echo "@inform-elevate:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.ELEVATE_DS2 }}" >> .npmrc
+
       - name: Install dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.ELEVATE_DS2 }}
 
       - name: Build Docusaurus site
         run: npm run build
@@ -77,9 +85,17 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          registry-url: 'https://npm.pkg.github.com'
+
+      - name: Configure npm for GitHub Packages
+        run: |
+          echo "@inform-elevate:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.ELEVATE_DS2 }}" >> .npmrc
 
       - name: Install dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.ELEVATE_DS2 }}
 
       - name: Test build
         run: npm run build
