Fix GitHub deployment: Add owrede author to blog authors.yml
- Resolves build error where blog post referenced missing author 'owrede'
- Keeps existing yangshun and slorber authors for compatibility
- Adds Oliver Wrede (owrede) as valid blog author with proper metadata

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -23,3 +23,14 @@ slorber:
     linkedin: sebastienlorber
     github: slorber
     newsletter: https://thisweekinreact.com
+
+owrede:
+  name: Oliver Wrede
+  title: UX/UI Design Strategist, ELEVATE Design System Product Owner
+  url: https://linkedin.com/in/owrede
+  image_url: https://avatars.githubusercontent.com/u/193944072?v=4
+  page: true
+  socials:
+    x: owrede
+    linkedin: owrede
+    github: owrede-inform
