Finalize ELEVATE Design System documentation site
Complete cleanup and finalization of the documentation site with all components and features:

## Major Updates
- Remove default Docusaurus tutorial content (blog posts, tutorial sections)
- Update package dependencies and configurations for production
- Enhance ComponentShowcase with improved styling and functionality
- Add comprehensive component changelog system with automation scripts

## Component Documentation
- All 45+ ELEVATE components documented with examples and API references
- Organized component overview with categorized navigation cards
- Complete design token documentation with CSS examples
- Pattern library with UI patterns and templates

## Infrastructure & Tooling
- Component changelog automation system with PowerShell scripts
- Enhanced code display components for better developer experience
- Updated build configuration for optimal performance
- Improved styling and theme integration throughout

## Content Structure
- Home: Installation, getting started, adoption guides
- Components: Complete component library with interactive examples
- Patterns: Reusable UI patterns and templates
- Design: Design tokens, typography, spacing, colors, shadows
- Guidelines: Design principles and best practices

The site is now production-ready with comprehensive documentation for the ELEVATE Design System.

--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,19 +1,24 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
+components:
+  label: Components
+  permalink: /compontents
+  description: Components tag description
 
-hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
+patterns:
+  label: Patterns
+  permalink: /patterns
+  description: Patterns tag description
 
-docusaurus:
-  label: Docusaurus
-  permalink: /docusaurus
-  description: Docusaurus tag description
+announcement:
+  label: Announcement
+  permalink: /announcement
+  description: Important announcements and news
 
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
+documentation:
+  label: Documentation
+  permalink: /documentation
+  description: Documentation updates and guides
+
+updates:
+  label: Updates
+  permalink: /updates
+  description: Product updates and changes
