--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@docusaurus/tsconfig": "3.8.1",
     "@docusaurus/types": "3.8.1",
     "chokidar": "^4.0.3",
+    "playwright": "^1.54.2",
     "typescript": "~5.6.2"
   },
   "browserslist": {
