Simplify "No changelog available" message to be minimal and clean
## Problem
- Previous message was too verbose and "noisy" when no changelog data exists
- Long explanatory text with bullet points and links was overwhelming
- Created unnecessary visual clutter for a simple "no data" state

## Solution
- **Simplified message**: Just "No changelog entries for this component."
- **Minimal styling**: Simple italic text, no big containers or icons
- **Reduced visual noise**: Clean, understated appearance

## Changes Made

### Message Content
- **Before**: Long explanation with bullets, icons, and external links
- **After**: Single sentence: "No changelog entries for this component."

### Styling Updates
- Removed large container with background colors and borders
- Simplified to just italic text with subtle gray color
- Minimal padding and clean typography
- Center-aligned for consistency

### User Experience
- **Less intrusive**: No longer draws attention when there's no data
- **More professional**: Simple, clean appearance
- **Focused**: Doesn't distract from actual component documentation

This creates a much cleaner experience where the absence of changelog data doesn't create visual noise or distraction from the component documentation itself.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "sync-theme": "node sync-theme-package.js",
     "sync-theme-build": "node sync-theme-package.js --build",
     "sync-theme-watch": "node sync-theme-package.js --watch",
-    "validate-theme": "node sync-theme-package.js --build && echo 'Theme package validation complete'"
+    "validate-theme": "node sync-theme-package.js --build && echo 'Theme package validation complete'",
+    "changelog": "node scripts/changelog-cli.js",
+    "changelog:generate": "node scripts/generate-changelog.js",
+    "changelog:all": "node scripts/generate-changelog.js --all",
+    "changelog:component": "node scripts/generate-changelog.js --component"
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
