docs: Organize Claude documentation in .claude/docs folder
- Move AUTOGEN_GUIDE.md, MANUAL_ORDERING.md, COMPONENT-CHANGELOG-SYSTEM.md to .claude/docs/
- Update CLAUDE.md with references to all Claude documentation
- Add Claude Documentation References section with organized links
- Update Content Management section to reflect autogenerated sidebar approach
- Create .claude/docs/README.md with organization pattern and naming conventions
- Update .gitignore to allow .claude/docs/ and CLAUDE.md while ignoring other .claude content

Establishes clear pattern:
- Claude implementation guides in .claude/docs/
- Referenced from CLAUDE.md for easy access
- UPPERCASE naming: SYSTEM-NAME-GUIDE.md
- Include practical examples and usage patterns

Future Claude notes should follow this pattern!

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ node_modules
 
 # Code Tools
 .claude
-CLAUDE.md
+!.claude/docs/
+!CLAUDE.md
 PACKAGE-DEPENDENCY-GUIDE.md
 THEME-DEVELOPMENT.md
 THEME.md
