--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@iconify/react": "^6.0.0",
     "@inform-elevate/elevate-core-ui": "^0.0.28-alpha",
     "@mdx-js/react": "^3.0.0",
+    "@shoelace-style/shoelace": "^2.20.1",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
